[gd_scene load_steps=20 format=3 uid="uid://dx5gxsxsta5s1"]

[ext_resource type="Texture2D" uid="uid://li8kvluh6kyu" path="res://Sprites/AutoShotgunGuy/SPRITES/asgzh0.png" id="1_lamdb"]
[ext_resource type="Texture2D" uid="uid://bj378aquo7ock" path="res://Sprites/AutoShotgunGuy/SPRITES/asgzi0.png" id="2_6eowd"]
[ext_resource type="Texture2D" uid="uid://cdripjyw5wodu" path="res://Sprites/AutoShotgunGuy/SPRITES/asgzj0.png" id="3_wwnsf"]
[ext_resource type="Texture2D" uid="uid://dhbc2id7csxjh" path="res://Sprites/AutoShotgunGuy/SPRITES/asgzk0.png" id="4_jvwgt"]
[ext_resource type="Texture2D" uid="uid://c4gnfmuuy105e" path="res://Sprites/AutoShotgunGuy/SPRITES/asgzl0.png" id="5_yj7q1"]
[ext_resource type="Texture2D" uid="uid://c3s3xurx3txl8" path="res://Sprites/AutoShotgunGuy/SPRITES/asgzm0.png" id="6_6xlb5"]
[ext_resource type="Texture2D" uid="uid://bakt8g0niypa8" path="res://Sprites/AutoShotgunGuy/SPRITES/asgzn0.png" id="7_l4vgi"]
[ext_resource type="Texture2D" uid="uid://vurwyo2645hb" path="res://Sprites/AutoShotgunGuy/SPRITES/asgza1.png" id="8_wjeo3"]
[ext_resource type="Texture2D" uid="uid://c0wfxclqse0wm" path="res://Sprites/Familiar/Sprites/Greater/GNIXA1.png" id="10_54r5u"]
[ext_resource type="Texture2D" uid="uid://c7dphbdus2lc" path="res://Sprites/Familiar/Sprites/Greater/GNIXB1.png" id="11_26avt"]
[ext_resource type="Texture2D" uid="uid://b8xrt4edopbe3" path="res://Sprites/Familiar/Sprites/Greater/GNIXC1.png" id="12_qujai"]
[ext_resource type="Texture2D" uid="uid://bmlsfremnw7f8" path="res://Sprites/AutoShotgunGuy/SPRITES/asgzq0.png" id="14_6wtmu"]
[ext_resource type="Texture2D" uid="uid://blvhdkxx3mci8" path="res://Sprites/AutoShotgunGuy/SPRITES/asgzr0.png" id="15_3bed5"]
[ext_resource type="Texture2D" uid="uid://osaqs48jhpdh" path="res://Sprites/AutoShotgunGuy/SPRITES/asgzs0.png" id="16_b5pxl"]
[ext_resource type="Texture2D" uid="uid://juhblyef3rhi" path="res://Sprites/Familiar/Sprites/Greater/GNIXK1.png" id="21_3yiqs"]
[ext_resource type="Texture2D" uid="uid://dma34m6e8y0sr" path="res://Sprites/AutoShotgunGuy/SPRITES/asgzg1.png" id="21_wbn3d"]
[ext_resource type="Script" uid="uid://buc36jrxnnorg" path="res://Scenes/Enemies/EnemyBasicGrunt.gd" id="24_favsk"]

[sub_resource type="BoxShape3D" id="BoxShape3D_01wab"]
size = Vector3(1, 2, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_w5s6p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_lamdb")
}, {
"duration": 1.0,
"texture": ExtResource("2_6eowd")
}, {
"duration": 1.0,
"texture": ExtResource("3_wwnsf")
}, {
"duration": 1.0,
"texture": ExtResource("4_jvwgt")
}, {
"duration": 1.0,
"texture": ExtResource("5_yj7q1")
}, {
"duration": 1.0,
"texture": ExtResource("6_6xlb5")
}, {
"duration": 1.0,
"texture": ExtResource("7_l4vgi")
}],
"loop": false,
"name": &"Die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_wjeo3")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_54r5u")
}, {
"duration": 1.0,
"texture": ExtResource("11_26avt")
}, {
"duration": 1.0,
"texture": ExtResource("12_qujai")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_6wtmu")
}, {
"duration": 1.0,
"texture": ExtResource("14_6wtmu")
}, {
"duration": 1.0,
"texture": ExtResource("15_3bed5")
}, {
"duration": 1.0,
"texture": ExtResource("15_3bed5")
}, {
"duration": 1.0,
"texture": ExtResource("16_b5pxl")
}],
"loop": false,
"name": &"explode",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_wbn3d")
}, {
"duration": 1.0,
"texture": ExtResource("21_wbn3d")
}, {
"duration": 1.0,
"texture": ExtResource("21_wbn3d")
}, {
"duration": 1.0,
"texture": ExtResource("21_wbn3d")
}],
"loop": true,
"name": &"hit",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_3yiqs")
}, {
"duration": 1.0,
"texture": ExtResource("21_3yiqs")
}, {
"duration": 1.0,
"texture": ExtResource("21_3yiqs")
}],
"loop": false,
"name": &"shoot",
"speed": 2.0
}]

[node name="Node3D" type="CharacterBody3D" groups=["Enemy"]]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
motion_mode = 1
script = ExtResource("24_favsk")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.45, 0)
shape = SubResource("BoxShape3D_01wab")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.592087, 0)
sprite_frames = SubResource("SpriteFrames_w5s6p")
animation = &"shoot"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.189617, 0)
target_position = Vector3(0, 0, -20)
debug_shape_custom_color = Color(0.85159, 0.204878, 0.171332, 1)

[connection signal="animation_finished" from="AnimatedSprite3D" to="." method="_on_animated_sprite_3d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
